--- a/env.development.example
+++ b/env.development.example
@@ -28,10 +28,11 @@ ALLOWED_HOSTS='["http://localhost:3000"]'
 # =============================================================================
 # LLM Configuration (Required for AI features)
 # =============================================================================
-LLM_PROVIDER=openai
-BASE_URL=https://api.openai.com/v1
-API_KEY=your-openai-api-key-here
-MODEL=gpt-3.5-turbo
+# Default: Using LlamaStack (self-hosted, no API key required)
+LLM_PROVIDER=llamastack
+BASE_URL=
+API_KEY=
+MODEL=meta-llama/Llama-3.2-3B-Instruct
 NODE_ENV=development
 
 # =============================================================================
@@ -110,10 +111,10 @@ VITE_ENVIRONMENT=development
 # Note: VITE_KEYCLOAK_URL is set from KEYCLOAK_FRONTEND_URL in deployment
 
 # =============================================================================
-# LlamaStack Configuration (Optional - for local LLM)
+# LlamaStack Configuration (Required when LLM_PROVIDER=llamastack)
 # =============================================================================
 LLAMASTACK_BASE_URL=http://llamastack:8321
-LLAMASTACK_MODEL=meta-llama/Llama-3.1-8B-Instruct
+LLAMASTACK_MODEL=meta-llama/Llama-3.2-3B-Instruct
 
 # =============================================================================
 # Development Notes
