--- a/env.example
+++ b/env.example
@@ -28,10 +28,11 @@ ALLOWED_HOSTS='["http://localhost:3000"]'
 # =============================================================================
 # LLM Configuration (Required for AI features)
 # =============================================================================
-LLM_PROVIDER=openai
-BASE_URL=https://api.openai.com/v1
-API_KEY=your-openai-api-key-here
-MODEL=gpt-3.5-turbo
+# Default: Using LlamaStack (self-hosted, no API key required)
+LLM_PROVIDER=llamastack
+BASE_URL=
+API_KEY=
+MODEL=meta-llama/Llama-3.2-3B-Instruct
 NODE_ENV=development
 
 # =============================================================================
@@ -42,7 +43,7 @@ EMBEDDING_PROVIDER=local
 EMBEDDING_MODEL=all-minilm
 EMBEDDING_DIMENSIONS=384
 # OLLAMA_BASE_URL=http://localhost:11434  # Only needed if using ollama provider (deprecated)
-# LLAMASTACK_BASE_URL=http://localhost:8080  # For future LlamaStack integration
+# LLAMASTACK_BASE_URL is set below for LlamaStack integration
 
 # =============================================================================
 # LLM Configuration - vertexai(Required for AI features)
