--- a/env.production.example
+++ b/env.production.example
@@ -29,10 +29,11 @@ ALLOWED_HOSTS='["https://spending-monitor-your-namespace.apps.your-cluster.examp
 # =============================================================================
 # LLM Configuration (Required for AI features)
 # =============================================================================
-LLM_PROVIDER=openai
-BASE_URL=https://api.openai.com/v1
-API_KEY=your-production-openai-api-key-here
-MODEL=gpt-4
+# Default: Using LlamaStack (self-hosted, no API key required)
+LLM_PROVIDER=llamastack
+BASE_URL=
+API_KEY=
+MODEL=meta-llama/Llama-3.2-3B-Instruct
 NODE_ENV=production
 
 # =============================================================================
